<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context="com.uber.app.DriverLoginActivity"
    android:background="@drawable/bgpic">

    <TextView
        android:id="@+id/driver_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="34dp"
        android:text="@string/customer_login"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:textSize="16sp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorAccent"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:textColorHint="@color/colorAccent"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="?attr/actionMenuTextColor"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/create_driver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login"
        android:layout_marginTop="5dp"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <Button
        android:id="@+id/registration"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/create_driver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/registration"
        android:textStyle="italic"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />
</RelativeLayout>
